contact me section

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </p>
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title">1200+</span>
+                            <span class="about_info-title">1500+</span>
                             <span class="about_info-name">Hours of Coding</span>
                         </div>
                         <div>
@@ -635,7 +635,7 @@
             <div class="contact_container container grid">
                 <div>
                     <p class="contact_message">Feel free to drop a message if you have any suggestions or collaboration
-                        ideas, and we'll get in touch.</p>
+                        ideas, and we'll get in touch. I'm always open to new opportunities and collaborations.</p>
 
                     <div class="contact_information">
                         <i class="uil uil-phone-alt contact_icon"></i>
