--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                 <div class="footer_container container grid">
                     <div>
                         <h1 class="footer_title">Anshul Agrawal</h1>
-                        <span class="footer_subtitle">Full Stack Web Developer</span>
+                        <span class="footer_subtitle">Node.js Backend Developer</span>
                     </div>
                     <div class="footer_socials">
                         <a href="https://github.com/AnshulAgrawal999" target="_blank" class="footer_social">
@@ -758,7 +758,7 @@
 </script>
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["Full Stack Web Developer", "Problem Solver", "Innovative Thinker", "Team Player"],
+            strings: ["Node.js Backend Developer", "Problem Solver", "Innovative Thinker", "Team Player"],
             typeSpeed: 120,
             backSpeed: 60,
             loop: true,
