--- a/index.html
+++ b/index.html
@@ -721,8 +721,8 @@
             <div>
                 <div class="footer_container container grid">
                     <div>
-                        <h1 class="footer_title">Anshul Agrawal</h1>
-                        <span class="footer_subtitle">Node.js Backend Developer</span>
+                        <h1 class="footer_title"> < /></span> Anshul Agrawal </h1>
+                        <h2> Node.js Backend Developer </h2>
                     </div>
                     <div class="footer_socials">
                         <a href="https://github.com/AnshulAgrawal999" target="_blank" class="footer_social">
