--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             <div class="qualification_data">
                                 <div>
 
-                                    <h3 class="qualification_title">Full Stack Web Development Course</h3>
+                                    <h3 class="qualification_title">Career Accelerator Program, Full Stack Web Development - MERN </h3>
                                     <span class="qualification_subtitle">Prepleaf by Masai, Bengaluru</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
@@ -229,7 +229,7 @@
                                     <span class="qualification_line"></span>
                                 </div>
                                 <div>
-                                    <h3 class="qualification_title">B.Tech in Computer Science Engineering</h3>
+                                    <h3 class="qualification_title">Bachelor of Technology - BTech, Computer Science and Engineering</h3>
                                     <span class="qualification_subtitle">Shri Govindram Seksaria Institute of Technology and Science, Indore, Madhya Pradesh</span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
