--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="home_data">
                         <h1 class="home_title" id="user-detail-name"> Hi👋, I'm Anshul Agrawal </h1>
                         <h3 class="home_subtitle"><span class="auto-type"></span></h3>
-                        <p class="home_description">Highly skilled Node.js Developer adept in backend development using Express.js and related frameworks. Experienced in designing and maintaining high-performance server-side applications and RESTful APIs. Proficient in JavaScript, Node.js, Express.js, MongoDB, and Git, with a solid foundation in data structures and algorithms. Highly passionate about building robust, scalable solutions. Excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven.✨</p>
+                        <p class="home_description">Highly skilled Node.js Developer adept in backend development using Express.js and related frameworks. Experienced in designing and maintaining high-performance server-side applications and RESTful APIs. Proficient in JavaScript, Node.js, Express.js, Nest.js, MongoDB, and Git, with a solid foundation in data structures and algorithms. Highly passionate about building robust, scalable solutions. Excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven.✨</p>
                         <div class="btn_container">
                             <a href="#contact" class="button button-flex sec_button">
                                 Connect with Me <i class="uil uil-message button_icon"></i>
@@ -160,7 +160,7 @@
                 <img src="./Images/2.png" alt="" class="about_img home-img">
                 <div class="about_data">
 
-                    <p  class="about_description"  id="user-detail-intro">I am Anshul Agrawal, a Node.js Developer adept in backend development using Express.js and related frameworks. I am experienced in designing and maintaining high-performance server-side applications and RESTful APIs. I am proficient in JavaScript, Node.js, Express.js, MongoDB and Git with a solid foundation in data structures and algorithms. I am highly passionate about building robust scalable solutions. I am an excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven. My journey includes an intensive 1500+ Hour Web Development program at Prepleaf by Masai School.   
+                    <p  class="about_description"  id="user-detail-intro">I am Anshul Agrawal, a Node.js Developer adept in backend development using Express.js and related frameworks. I am experienced in designing and maintaining high-performance server-side applications and RESTful APIs. I am proficient in JavaScript, Node.js, Express.js, Nest.js, MongoDB and Git with a solid foundation in data structures and algorithms. I am highly passionate about building robust scalable solutions. I am an excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven. My journey includes an intensive 1500+ Hour Web Development program at Prepleaf by Masai School.   
                         I have a knack for implementing creative solutions and thrive in collaborative environments. My meticulous attention to detail and passion for problem-solving are key drivers that set me apart in the field.🚀                 
                     </p>
                     <div class="about_info">
