--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="home_data">
                         <h1 class="home_title" id="user-detail-name"> Hi👋, I'm Anshul Agrawal </h1>
                         <h3 class="home_subtitle"><span class="auto-type"></span></h3>
-                        <p class="home_description">Highly skilled Node.js Developer adept in backend development using Express.js and related frameworks. Experienced in designing and maintaining high-performance server-side applications and RESTful APIs. Proficient in JavaScript, Node.js, Express.js, Nest.js, MongoDB, and Git, with a solid foundation in data structures and algorithms. Highly passionate about building robust, scalable solutions. Excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven.✨</p>
+                        <p class="home_description">Highly skilled Node.js Developer adept in backend development using Express.js, Nest.js and related frameworks. Experienced in designing and maintaining high-performance server-side applications and RESTful APIs. Proficient in JavaScript, Node.js, Express.js, Nest.js, MongoDB, and Git, with a solid foundation in data structures and algorithms. Highly passionate about building robust, scalable solutions. Excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven.✨</p>
                         <div class="btn_container">
                             <a href="#contact" class="button button-flex sec_button">
                                 Connect with Me <i class="uil uil-message button_icon"></i>
@@ -160,12 +160,16 @@
                 <img src="./Images/2.png" alt="" class="about_img home-img">
                 <div class="about_data">
 
-                    <p  class="about_description"  id="user-detail-intro">I am Anshul Agrawal, a Node.js Developer adept in backend development using Express.js and related frameworks. I am experienced in designing and maintaining high-performance server-side applications and RESTful APIs. I am proficient in JavaScript, Node.js, Express.js, Nest.js, MongoDB and Git with a solid foundation in data structures and algorithms. I am highly passionate about building robust scalable solutions. I am an excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven. My journey includes an intensive 1500+ Hour Web Development program at Prepleaf by Masai School.   
+                    <p  class="about_description"  id="user-detail-intro">I am Anshul Agrawal, a Node.js Developer adept in backend development using Express.js, Nest.js and related frameworks. 
+                        I am experienced in designing and maintaining high-performance server-side applications and RESTful APIs. 
+                        I am proficient in JavaScript, Node.js, Express.js, Nest.js, MongoDB and Git with a solid foundation in data structures and algorithms. 
+                        I am highly passionate about building robust scalable solutions. 
+                        I am an excellent communicator and collaborator committed to seamless integration across teams. Proactive and self-driven.   
                         I have a knack for implementing creative solutions and thrive in collaborative environments. My meticulous attention to detail and passion for problem-solving are key drivers that set me apart in the field.🚀                 
                     </p>
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title">1500+</span>
+                            <span class="about_info-title">2000+</span>
                             <span class="about_info-name">Hours of Coding</span>
                         </div>
                         <div>
@@ -221,6 +225,7 @@
                                     <span class="qualification_line"></span>
                                 </div>
                             </div>
+
                             <div class="qualification_data">
                                 <div></div>
 
@@ -245,20 +250,36 @@
                             
                             <!-- ========== Experience 1 ========== -->
                             <div class="qualification_data">
-
                                 <div>
-                                    <h3 class="qualification_title"> Junior Sales Manager </h3>
-                                    <span class="qualification_subtitle"> Ind Supply Corporation, Bhopal, Madhya Pradesh</span>
+
+                                    <h3 class="qualification_title"> Software Development Engineer-1 </h3>
+                                    <span class="qualification_subtitle"> Schoollog, Jaipur, Rajasthan </span>
                                     <div class="qualification_calender">
                                         <i class="uil uil-calendar-alt"></i>
-                                        [ June 2020 - April 2023 ]
+                                        [ Oct 2024 - Jan 2025 ]
                                     </div>
                                 </div>
                                 <div>
                                     <span class="qualification_rounder"></span>
                                     <span class="qualification_line"></span>
                                 </div>
+                            </div>
 
+                            <div class="qualification_data">
+                                <div></div>
+
+                                <div>
+                                    <span class="qualification_rounder"></span>
+                                    <span class="qualification_line"></span>
+                                </div>
+                                <div>
+                                    <h3 class="qualification_title"> Junior Sales Manager </h3>
+                                    <span class="qualification_subtitle"> Ind Supply Corporation, Bhopal, Madhya Pradesh </span>
+                                    <div class="qualification_calender">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        [ June 2020 - April 2023 ]
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
