update project details

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                     <h3 class="portfolio_title project_title project-title">Enquiry Management App</h3>
                     <p class="portfolio_description project-description"> Enquiry Management App is designed to streamline the process of handling prospective student enquiries for school admissions. 
                         It provides an intuitive user panel for parents or guardians to submit enquiries and a robust admin panel for admissions staff to manage and follow up on them efficiently.</p>
-                    <p class="project-tech-stack"> <b>Tech Stack : </b> React | Nodejs | Nextjs | Nestjs | Chakra UI | React Query | MongoDB </p>
+                    <p class="project-tech-stack"> <b>Tech Stack : </b> Reactjs | Nodejs | Nextjs | Nestjs | Chakra UI | React Query | MongoDB </p>
                     
                     <a href="https://github.com/AnshulAgrawal999/Enquiry_Management_app" target="_blank"
                         class="project-github-link button button-flex button-small portfolio_button">
@@ -610,7 +610,7 @@
                 <div class="portfolio_data">
                     <h3 class="portfolio_title project_title project-title"> ProTask App </h3>
                     <p class="portfolio_description project-description"> ProTask is designed for efficient task and project management. Seamlessly organize, track, and prioritize tasks while overseeing the progress of complex projects. ProTask's intuitive interface fosters collaboration, ensuring your team stays aligned and projects stay on course. </p>
-                    <p class="project-tech-stack"><b> Tech Stack : </b> Node | Express | NPM | MongoDB </p>
+                    <p class="project-tech-stack"><b> Tech Stack : </b> Nodejs | Expressjs | NPM | MongoDB </p>
                     <a href="https://github.com/AnshulAgrawal999/Pro-Task" target="_blank"
                         class="project-github-link button button-flex button-small portfolio_button">
                         GitHub Repo
