add updated resume

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
             <h2 class="section_title"> My Projects </h2>
 
             <div class="portfolio_content grid project-card">
-                <a href="https://school-enquiry-backend.onrender.com/" target="_blank" >
+                <a href="https://enquiry-management-app.vercel.app/" target="_blank" >
                 <img src="./Images/Enquiry Management App.png" alt="Enquiry Management App" class="portfolio_img">
                 </a>
                 
@@ -595,7 +595,7 @@
                         <i class="uil uil-external-link-alt button_icon"></i>
                     </a>
                     
-                    <a href="https://school-enquiry-backend.onrender.com/" target="_blank"
+                    <a href="https://enquiry-management-app.vercel.app/" target="_blank"
                         class="button button-flex button-small portfolio_button project-deployed-link">
                         Backend Deployment Link
                         <i class="uil uil-external-link-alt button_icon"></i>
